--- a/ProjetoCalculadora/style.css
+++ b/ProjetoCalculadora/style.css
@@ -6,9 +6,10 @@ body {
 }
 
 .calculator {
-  background: #DDD;
+  background: #CCC;
+  border: 2px solid #DDD;
   border-radius: 1rem;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); */
   padding: 1.5rem;
   width: min-content;
 }
@@ -31,10 +32,8 @@ body {
   margin-bottom: 1.5rem;
   height: 5rem;
   width: 100%;
-  
   font-size: 150%;
   padding: 1rem;
-  /* padding-top: 2.5rem; */
   text-align: right;
 }
 .display-ipt:focus {
